Fix the vertical alignment for labels inside the .form--inline abstraction

--- a/Ressources/Private/Sass/base/_forms.scss
+++ b/Ressources/Private/Sass/base/_forms.scss
@@ -166,7 +166,6 @@ $ Form-Inline abstraction
 ================================================================================ */
 .form--inline {
   label {
-    display: inline-block;
     margin-#{$end}: .3em;
   }
   .label--checkbox {
@@ -174,6 +173,7 @@ $ Form-Inline abstraction
     margin-#{$end}: 1em;
   }
   input { margin-#{$end}: 1em; }
+  label,
   button,
   input,
   select,
